Updated API client to work.

--- a/PandaDB/static/html/admin.html
+++ b/PandaDB/static/html/admin.html
@@ -14,7 +14,19 @@
     <div class="contents">
         <div class="tablecontrols"></div>
         <div class="tablecontents">
-            <table class="resulttable">
+            <table class="resulttable" id="topics">
+                <thead>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <table class="resulttable2" id="messages">
+                <thead>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <table class="resulttable3" id="users">
                 <thead>
                 </thead>
                 <tbody>
